@@ -13,38 +13,42 @@ import java.util.List;
 
 @Service
 public class ActivityTypeServiceImpl implements ActivityTypeService {
-
+    
     private final ActivityTypeRepository typeRepository;
     private final ActivityCategoryRepository categoryRepository;
-
-    public ActivityTypeServiceImpl(ActivityTypeRepository typeRepository,
+    
+    public ActivityTypeServiceImpl(ActivityTypeRepository typeRepository, 
                                    ActivityCategoryRepository categoryRepository) {
         this.typeRepository = typeRepository;
         this.categoryRepository = categoryRepository;
     }
-
+    
     @Override
     public ActivityType createType(Long categoryId, ActivityType type) {
-
+        // Find category
         ActivityCategory category = categoryRepository.findById(categoryId)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Category not found"));
-
-        if (type.getUnit() == null || type.getUnit().isBlank()) {
+                .orElseThrow(() -> new ResourceNotFoundException("Category not found"));
+        
+        // Validate required fields
+        if (type.getTypeName() == null || type.getTypeName().trim().isEmpty()) {
+            throw new ValidationException("Type name is required");
+        }
+        if (type.getUnit() == null || type.getUnit().trim().isEmpty()) {
             throw new ValidationException("Unit is required");
         }
-
+        
+        // Set category
         type.setCategory(category);
+        
         return typeRepository.save(type);
     }
-
+    
     @Override
     public ActivityType getType(Long id) {
         return typeRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Category not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Activity type not found"));
     }
-
+    
     @Override
     public List<ActivityType> getTypesByCategory(Long categoryId) {
         return typeRepository.findByCategory_Id(categoryId);
